--- a/Lab1_Partition/Makefile
+++ b/Lab1_Partition/Makefile
@@ -1,6 +1,6 @@
 # ompiler & Linker settings
 CC = g++
-CFLAGS = -g -Wall -std=c++11 -pthread -O3 -I./include
+CFLAGS = -g -Wall -std=c++11 -DNDEBUG -pthread -O3 -I./include
 
 # Valgrind for memory issue
 CHECKCC = valgrind
