[TODO]: Need to check the need for rotate

--- a/Lab2_Floorplan/Makefile
+++ b/Lab2_Floorplan/Makefile
@@ -1,6 +1,6 @@
 # ompiler & Linker settings
 CC = g++
-CFLAGS = -g -Wall -std=c++11 -pthread -O3 -I./include
+CFLAGS = -g -Wall -std=c++11 -pthread -O3 -DNDEBUG -I./include
 
 # Valgrind for memory issue
 CHECKCC = valgrind
@@ -30,25 +30,34 @@ check:
 	$(CHECKCC) $(CHECKFLAGS) time ./$(TARGET) testcase/sample1.dat testcase/sample1.out
 
 do1:
-	./$(TARGET) testcase/sample.block testcase/sample.rpt
+	time ./$(TARGET) testcase/sample.block testcase/sample.rpt
 
 do2:
-	./$(TARGET) testcase/ami33.block testcase/ami33.rpt
+	time ./$(TARGET) testcase/ami33.block testcase/ami33.rpt
 
 do3:
-	./$(TARGET) testcase/ami49.block testcase/ami49.rpt
+	time ./$(TARGET) testcase/ami49.block testcase/ami49.rpt
 
 do4:
-	./$(TARGET) testcase/apte.block testcase/apte.rpt
+	time ./$(TARGET) testcase/apte.block testcase/apte.rpt
 
 do5:
-	./$(TARGET) testcase/hp.block testcase/hp.rpt
+	time ./$(TARGET) testcase/hp.block testcase/hp.rpt
 
 do6:
-	./$(TARGET) testcase/xerox.block testcase/xerox.rpt
+	time ./$(TARGET) testcase/xerox.block testcase/xerox.rpt
 
 do7:
+	time ./$(TARGET) testcase/ami49_2.block testcase/ami49_2.rpt
+
+do8:
+	time ./$(TARGET) testcase/ami49_3.block testcase/ami49_3.rpt
+
+do9:
 	time ./$(TARGET) testcase/sample300.block testcase/sample300.rpt
+
+do10:
+	time ./$(TARGET) testcase/ami49_5.block testcase/ami49_5.rpt
 
 clean:
 	rm -rf $(OBJDIR) $(TARGET) testcase/*.rpt out
