--- a/Lab2_Floorplan/Makefile
+++ b/Lab2_Floorplan/Makefile
@@ -31,33 +31,43 @@ check:
 
 do1:
 	time ./$(TARGET) testcase/sample.block testcase/sample.rpt
+	./visualize/floorplan_visualize -i testcase/sample.block -o testcase/sample.rpt -p sample -d
 
 do2:
 	time ./$(TARGET) testcase/ami33.block testcase/ami33.rpt
+	./visualize/floorplan_visualize -i testcase/ami33.block -o testcase/ami33.rpt -p ami33 -d
 
 do3:
 	time ./$(TARGET) testcase/ami49.block testcase/ami49.rpt
+	./visualize/floorplan_visualize -i testcase/ami49.block -o testcase/ami49.rpt -p ami49 -d
 
 do4:
 	time ./$(TARGET) testcase/apte.block testcase/apte.rpt
+	./visualize/floorplan_visualize -i testcase/apte.block -o testcase/apte.rpt -p apte -d
 
 do5:
 	time ./$(TARGET) testcase/hp.block testcase/hp.rpt
+	./visualize/floorplan_visualize -i testcase/hp.block -o testcase/hp.rpt -p hp -d
 
 do6:
 	time ./$(TARGET) testcase/xerox.block testcase/xerox.rpt
+	./visualize/floorplan_visualize -i testcase/xerox.block -o testcase/xerox.rpt -p xerox -d
 
 do7:
 	time ./$(TARGET) testcase/ami49_2.block testcase/ami49_2.rpt
+	./visualize/floorplan_visualize -i testcase/ami49_2.block -o testcase/ami49_2.rpt -p ami49_2 -d
 
 do8:
 	time ./$(TARGET) testcase/ami49_3.block testcase/ami49_3.rpt
+	./visualize/floorplan_visualize -i testcase/ami49_3.block -o testcase/ami49_3.rpt -p ami49_3 -d
 
 do9:
 	time ./$(TARGET) testcase/sample300.block testcase/sample300.rpt
+	./visualize/floorplan_visualize -i testcase/sample300.block -o testcase/sample300.rpt -p sample300 -d
 
 do10:
 	time ./$(TARGET) testcase/ami49_5.block testcase/ami49_5.rpt
+	./visualize/floorplan_visualize -i testcase/ami49_5.block -o testcase/ami49_5.rpt -p ami49_5 -d
 
 clean:
 	rm -rf $(OBJDIR) $(TARGET) testcase/*.rpt out
