--- a/Lab3_Standard_Cell_Euler_Path/Makefile
+++ b/Lab3_Standard_Cell_Euler_Path/Makefile
@@ -30,11 +30,14 @@ $(OBJDIR)/%.o: $(SRCDIR)/%.cpp | $(OBJDIR)
 check:
 	$(CHECKCC) $(CHECKFLAGS) time ./$(TARGET) testcase/NOR2.sp testcase/NOR2.rpt
 
+INV:
+	./$(TARGET) testcase/INV.sp testcase/INV.rpt
+
 NOR2:
-	./$(TARGET) testcase/NOR2.sp testcase/NOR2.rpt > log
+	./$(TARGET) testcase/NOR2.sp testcase/NOR2.rpt
 
 NAND4:
-	./$(TARGET) testcase/NAND4.sp testcase/NAND4.rpt > log
+	./$(TARGET) testcase/NAND4.sp testcase/NAND4.rpt
 
 s1:
 	./$(TARGET) testcase/s1.sp testcase/s1.rpt
@@ -43,10 +46,10 @@ s2:
 	./$(TARGET) testcase/s2.sp testcase/s2.rpt
 
 s3:
-	./$(TARGET) testcase/ASYNC_DFFHx1_ASAP7_75t_R.sp testcase/s3.rpt > log
+	./$(TARGET) testcase/ASYNC_DFFHx1_ASAP7_75t_R.sp testcase/s3.rpt
 
 s4:
-	./$(TARGET) testcase/case7.sp testcase/s4.rpt
+	./$(TARGET) testcase/case7.sp testcase/s4.rpt > log
 
 clean:
 	rm -rf $(OBJDIR) $(TARGET) testcase/*.rpt log
