current best SA schedule & thread op

--- a/Lab3_Standard_Cell_Euler_Path/Makefile
+++ b/Lab3_Standard_Cell_Euler_Path/Makefile
@@ -1,7 +1,7 @@
 # ompiler & Linker settings
 CC = g++
-#CFLAGS = -g -Wall -std=c++11 -pthread -O3 -DNDEBUG -I./include
-CFLAGS = -g -Wall -std=c++11 -pthread -O3 -I./include
+CFLAGS = -g -Wall -std=c++11 -pthread -O3 -DNDEBUG -I./include
+#CFLAGS = -g -Wall -std=c++11 -pthread -O3 -I./include
 
 # Valgrind for memory issue
 CHECKCC = valgrind
@@ -28,28 +28,28 @@ $(OBJDIR)/%.o: $(SRCDIR)/%.cpp | $(OBJDIR)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 check:
-	$(CHECKCC) $(CHECKFLAGS) time ./$(TARGET) testcase/NOR2.sp testcase/NOR2.rpt
+	$(CHECKCC) $(CHECKFLAGS) ./$(TARGET) testcase/case7.sp testcase/s4.rpt
 
 INV:
-	./$(TARGET) testcase/INV.sp testcase/INV.rpt
+	time ./$(TARGET) testcase/INV.sp testcase/INV.rpt
 
 NOR2:
-	./$(TARGET) testcase/NOR2.sp testcase/NOR2.rpt
+	time ./$(TARGET) testcase/NOR2.sp testcase/NOR2.rpt
 
 NAND4:
-	./$(TARGET) testcase/NAND4.sp testcase/NAND4.rpt
+	time ./$(TARGET) testcase/NAND4.sp testcase/NAND4.rpt
 
 s1:
-	./$(TARGET) testcase/s1.sp testcase/s1.rpt
+	time ./$(TARGET) testcase/s1.sp testcase/s1.rpt
 
 s2:
-	./$(TARGET) testcase/s2.sp testcase/s2.rpt
+	time ./$(TARGET) testcase/s2.sp testcase/s2.rpt
 
 s3:
 	time ./$(TARGET) testcase/ASYNC_DFFHx1_ASAP7_75t_R.sp testcase/s3.rpt
 
 s4:
-	./$(TARGET) testcase/case7.sp testcase/s4.rpt
+	time ./$(TARGET) testcase/case7.sp testcase/s4.rpt
 
 s5:
 	time ./$(TARGET) testcase/dff_mtspc.sp testcase/s5.rpt
